@@ -2,13 +2,18 @@ package dk.digitalidentity.integration.kitos;
 
 import dk.digitalidentity.Constants;
 import dk.digitalidentity.dao.KitosRolesDao;
+import dk.digitalidentity.model.dto.enums.KitosField;
 import dk.digitalidentity.model.entity.Asset;
+import dk.digitalidentity.model.entity.AssetProductLink;
 import dk.digitalidentity.model.entity.KitosRole;
 import dk.digitalidentity.model.entity.Property;
+import dk.digitalidentity.model.entity.Setting;
 import dk.digitalidentity.model.entity.Supplier;
 import dk.digitalidentity.model.entity.User;
 import dk.digitalidentity.model.entity.UserProperty;
+import dk.digitalidentity.model.entity.enums.ArchiveDuty;
 import dk.digitalidentity.model.entity.enums.AssetStatus;
+import dk.digitalidentity.model.entity.enums.ContainsAITechnologyEnum;
 import dk.digitalidentity.model.entity.enums.Criticality;
 import dk.digitalidentity.model.entity.enums.DataProcessingAgreementStatus;
 import dk.digitalidentity.service.AssetService;
@@ -16,6 +21,7 @@ import dk.digitalidentity.service.ChoiceService;
 import dk.digitalidentity.service.SettingsService;
 import dk.digitalidentity.service.SupplierService;
 import dk.digitalidentity.service.UserService;
+import dk.kitos.api.model.ExternalReferenceDataResponseDTO;
 import dk.kitos.api.model.GDPRRegistrationsResponseDTO;
 import dk.kitos.api.model.IdentityNamePairResponseDTO;
 import dk.kitos.api.model.ItContractResponseDTO;
@@ -32,14 +38,13 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static dk.digitalidentity.Constants.NEEDS_CVR_UPDATE_PROPERTY;
-import static dk.digitalidentity.integration.kitos.KitosConstants.KITOS_OWNER_ROLE_SETTING_KEY;
-import static dk.digitalidentity.integration.kitos.KitosConstants.KITOS_RESPONSIBLE_ROLE_SETTING_KEY;
-import static dk.digitalidentity.integration.kitos.KitosConstants.KITOS_USAGE_UUID_PROPERTY_KEY;
-import static dk.digitalidentity.integration.kitos.KitosConstants.KITOS_UUID_PROPERTY_KEY;
+import static dk.digitalidentity.integration.kitos.KitosConstants.*;
 import static dk.digitalidentity.util.NullSafe.nullSafe;
 
 @Slf4j
@@ -159,12 +164,29 @@ public class KitosSyncService {
         if (!itContractResponseDTO.getGeneral().getValidity().getValid()) {
             return;
         }
-        asset.setContractDate(
-            nullSafe(() -> itContractResponseDTO.getGeneral().getValidity().getValidFrom().toLocalDate())
-        );
-        asset.setContractTermination(
-            nullSafe(() -> itContractResponseDTO.getGeneral().getValidity().getValidTo().toLocalDate())
-        );
+
+		asset.setTerminationNotice(
+				nullSafe(() -> itContractResponseDTO.getTermination().getTerms().getNoticePeriodMonths().getName())
+		);
+
+		String settingContractDate = settingsService.getString(KitosConstants.KITOS_FIELDS_CONTRACT_DATE, null);
+		if (settingContractDate == null || KitosField.SYSTEMS_CONTRACT_FRONTPAGE_FROM.equals(KitosField.valueOf(settingContractDate))) {
+			asset.setContractDate(
+					nullSafe(() -> itContractResponseDTO.getGeneral().getValidity().getValidFrom().toLocalDate())
+			);
+		} else if (KitosField.SYSTEMS_CONTRACT_CONCLUDED.equals(KitosField.valueOf(settingContractDate))) {
+			// TODO AMALIE Systemer -> Kontrakt -> Indgået
+		}
+
+		String settingContractTerminationDate = settingsService.getString(KitosConstants.KITOS_FIELDS_CONTRACT_DATE, null);
+		if (settingContractTerminationDate == null || KitosField.SYSTEMS_CONTRACT_FRONTPAGE_TO.equals(KitosField.valueOf(settingContractTerminationDate))) {
+			asset.setContractTermination(
+					nullSafe(() -> itContractResponseDTO.getGeneral().getValidity().getValidTo().toLocalDate())
+			);
+		} else if (KitosField.SYSTEMS_CONTRACT_EXPIRES.equals(KitosField.valueOf(settingContractTerminationDate))) {
+			// TODO AMALIE Systemer -> Kontrakt -> Udløber
+		}
+
     }
 
     private void updateAssetWith(final Asset asset, final ItSystemUsageResponseDTO itSystemUsageResponseDTO) {
@@ -172,9 +194,27 @@ public class KitosSyncService {
         if (!valid) {
             return;
         }
-        addKitosUsageUuid(asset, itSystemUsageResponseDTO.getUuid().toString());
-        setAssetOwner(asset, itSystemUsageResponseDTO);
-        setAssetManagers(asset, itSystemUsageResponseDTO);
+
+		// Map enum from integration to internal
+		ContainsAITechnologyEnum internalStatus;
+		try {
+			var dtoEnum = itSystemUsageResponseDTO.getGeneral().getContainsAITechnology();
+			if (dtoEnum == null) {
+				internalStatus = ContainsAITechnologyEnum.UNDECIDED;
+			} else {
+				internalStatus = ContainsAITechnologyEnum.valueOf(dtoEnum.name());
+			}
+		} catch (IllegalArgumentException e) {
+			internalStatus = ContainsAITechnologyEnum.UNDECIDED;
+		}
+		asset.setAiStatus(internalStatus);
+
+		addKitosUsageUuid(asset, itSystemUsageResponseDTO.getUuid().toString());
+		setAssetOwner(asset, itSystemUsageResponseDTO);
+		setAssetManagers(asset, itSystemUsageResponseDTO);
+		setAssetOperationResponsible(asset,  itSystemUsageResponseDTO);
+		asset.setArchive(ArchiveDuty.fromApiEnum(itSystemUsageResponseDTO.getArchiving().getArchiveDuty()));
+
         final GDPRRegistrationsResponseDTO.BusinessCriticalEnum businessCritical = nullSafe(() -> itSystemUsageResponseDTO.getGdpr().getBusinessCritical());
         if (businessCritical != null) {
             if (businessCritical == GDPRRegistrationsResponseDTO.BusinessCriticalEnum.YES && asset.getCriticality() != Criticality.CRITICAL) {
@@ -183,8 +223,18 @@ public class KitosSyncService {
                 asset.setCriticality(Criticality.NON_CRITICAL);
             }
         }
-    }
 
+		String setting = settingsService.getString(KitosConstants.KITOS_FIELDS_ASSET_LINK_SOURCE, null);
+		if (setting != null && KitosField.SYSTEMS_REFS_DOCUMENT.equals(KitosField.valueOf(setting))) {
+			asset.getProductLinks().clear();
+			asset.getProductLinks().addAll(
+				itSystemUsageResponseDTO.getExternalReferences().stream()
+						.filter(e -> e.getUrl() != null && !e.getUrl().isBlank())
+						.map(e -> new AssetProductLink(null, e.getUrl(), asset))
+					.collect(Collectors.toList())
+			);
+		}
+    }
 
     private void setAssetManagers(final Asset asset, final ItSystemUsageResponseDTO itSystemUsageResponseDTO) {
         final String responsibleRoleUuid = settingsService.getString(KITOS_RESPONSIBLE_ROLE_SETTING_KEY, "");
@@ -220,7 +270,7 @@ public class KitosSyncService {
         if (ownerUuid != null) {
             final List<User> userEntities = userService.findByPropertyKeyValue(KITOS_UUID_PROPERTY_KEY, ownerUuid.toString());
             if (userEntities.size() == 1) {
-                asset.setResponsibleUsers(List.of(userEntities.get(0)));
+                asset.setResponsibleUsers(List.of(userEntities.getFirst()));
             } else if (userEntities.isEmpty()) {
                 log.warn("User not found kitos uuid {}", ownerUuid);
             } else {
@@ -228,6 +278,22 @@ public class KitosSyncService {
             }
         }
     }
+	// TODO: Refactor when eliminating mapping tables in the future
+	private void setAssetOperationResponsible(final Asset asset, final ItSystemUsageResponseDTO itSystemUsageResponseDTO) {
+		final String operationResponsibleRoleUuid = settingsService.getString(KITOS_OPERATION_RESPONSIBLE_ROLE_SETTING_KEY, "");
+		itSystemUsageResponseDTO.getRoles().stream()
+				.filter(r -> operationResponsibleRoleUuid.equalsIgnoreCase(r.getRole().getUuid().toString()))
+				.map(r -> r.getUser().getUuid())
+				.forEach(r -> {
+					final Optional<User> user = findUser(r.toString());
+					user.ifPresent(value -> {
+						// Make sure to only add managers once
+						if (asset.getManagers().stream().noneMatch(u -> value.getUuid().equals(u.getUuid()))) {
+							asset.getOperationResponsibleUsers().add(value);
+						}
+					});
+				});
+	}
 
     private void updateAsset(final Asset asset, final ItSystemResponseDTO responseDTO) {
         asset.setName(responseDTO.getName());
@@ -235,7 +301,9 @@ public class KitosSyncService {
         if (!supplierOverriden(asset)) {
             asset.setSupplier(findOrCreateSupplier(responseDTO));
         }
-    }
+
+		setLinksFromKitosSystem(responseDTO, asset);
+	}
 
     private boolean supplierOverriden(final Asset asset) {
         //noinspection DataFlowIssue
@@ -259,15 +327,18 @@ public class KitosSyncService {
         asset.setUpdatedAt(responseDTO.getLastModified().toLocalDateTime());
         asset.setName(responseDTO.getName());
         asset.setDescription(responseDTO.getDescription());
+		asset.setAiStatus(ContainsAITechnologyEnum.UNDECIDED);
         asset.setAssetType(choiceService.getValue(Constants.CHOICE_LIST_ASSET_IT_SYSTEM_TYPE_ID).orElseThrow());
         asset.setAssetStatus(AssetStatus.NOT_STARTED);
         asset.setSupplier(supplier);
         asset.setCriticality(Criticality.NON_CRITICAL);
         asset.setDataProcessingAgreementStatus(DataProcessingAgreementStatus.NO);
-        assetService.create(asset);
+		setLinksFromKitosSystem(responseDTO, asset);
+
+		assetService.create(asset);
     }
 
-    private Supplier findOrCreateSupplier(final ItSystemResponseDTO responseDTO) {
+	private Supplier findOrCreateSupplier(final ItSystemResponseDTO responseDTO) {
         if (responseDTO.getRightsHolder() == null) {
             return null;
         }
@@ -312,8 +383,16 @@ public class KitosSyncService {
     private void removeKitosUuid(final Asset asset) {
         final List<Property> listCopy = new ArrayList<>(asset.getProperties());
         listCopy.stream()
-            .filter(p -> p.getKey().equals(KITOS_UUID_PROPERTY_KEY) ||p.getKey().equals(KITOS_USAGE_UUID_PROPERTY_KEY))
-            .forEach(property -> asset.getProperties().remove(property));
+            .filter(p -> p.getKey().equals(KITOS_UUID_PROPERTY_KEY) || p.getKey().equals(KITOS_USAGE_UUID_PROPERTY_KEY))
+            .forEach(property -> {
+				Property copyOfProperty = new Property();
+				copyOfProperty.setKey(X_KITOS_USAGE_UUID_PROPERTY_KEY);
+				copyOfProperty.setValue(property.getValue());
+				copyOfProperty.setEntity(asset);
+				asset.getProperties().add(copyOfProperty);
+				asset.setActive(false);
+				asset.getProperties().remove(property);
+			});
     }
 
     private Optional<Asset> findItSystem(final String kitosUuid) {
@@ -363,5 +442,18 @@ public class KitosSyncService {
                     .build())
             );
     }
+
+	private void setLinksFromKitosSystem(ItSystemResponseDTO responseDTO, Asset asset) {
+		String setting = settingsService.getString(KitosConstants.KITOS_FIELDS_ASSET_LINK_SOURCE, null);
+		if (setting != null && KitosField.SYSTEMS_FRONTPAGE_REFS.equals(KitosField.valueOf(setting))) {
+			asset.getProductLinks().clear();
+			asset.getProductLinks().addAll(
+				responseDTO.getExternalReferences().stream()
+						.filter(e -> e.getUrl() != null && !e.getUrl().isBlank())
+						.map(e -> new AssetProductLink(null, e.getUrl(), asset))
+					.collect(Collectors.toList())
+			);
+		}
+	}
 
 }
